[package]
name = "imbl-indexed"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
arbitrary = ["dep:arbitrary", "imbl/arbitrary"]
debug = ["imbl/debug"]
proptest = ["dep:proptest", "imbl/proptest"]
quickcheck = ["dep:quickcheck", "imbl/quickcheck"]
rayon = ["dep:rayon", "imbl/rayon"]
refpool = ["dep:refpool", "imbl/refpool"]
serde = ["dep:serde", "imbl/serde"]
small-chunks = ["imbl/small-chunks"]
triomphe = ["dep:triomphe", "imbl/triomphe"]

[dependencies]
imbl = "5.0.0"
quickcheck = { version = "1.0", optional = true }
proptest = { version = "1.0", optional = true }
serde = { version = "1", optional = true }
rayon = { version = "1", optional = true }
refpool = { version = "0.4", optional = true }
arbitrary = { version = "1.0", optional = true }
triomphe = { version = "0.1", optional = true }
